# monkelang

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yaml
cmake/: googletest.cmake
src/: CMakeLists.txt
src/monke/: CMakeLists.txt
src/monke/frontend/: CMakeLists.txt
src/monke/frontend/ast/: AstDumpTree.hpp  AstPrettyPrint.hpp  AstVisitor.hpp  CMakeLists.txt  Expr.cpp  Expr.hpp  Node.hpp  Stmt.cpp  Stmt.hpp
src/monke/frontend/interpreter/: CMakeLists.txt  Callable.hpp  Environment.hpp  Function.cpp  Function.hpp  Interpreter.hpp  Literal.hpp  Return.hpp
src/monke/frontend/parsing/: CMakeLists.txt  FlexLexer.h  Grammar.yy  Lex.l  LexContext.hpp  Scanner.hpp  SourceModule.hpp  SyntaxError.hpp
src/monke/tools/: CMakeLists.txt  Repl.cpp
test/: CMakeLists.txt  test_ast.cpp  test_interpreter.cpp  test_parser.cpp
test/parser/: test_ast.cpp  test_parser.cpp  util.hpp
test/testfiles/ast/: arithmetics.expected  arithmetics.in  function_declaration.expected  function_declaration.in  gcd.expected  gcd.in  if_statement.expected  if_statement.in  io.expected  io.in  literals.expected  literals.in  variable_declaration.expected  variable_declaration.in
test/testfiles/interpreter/: arithmetics.expected  arithmetics.in  blocks.expected  blocks.in  function_call.expected  function_call.in  gcd.expected  gcd.in  gcd.read  if_statement.expected  if_statement.in  literals.expected  literals.in  utf-8.expected  utf-8.in  variables.expected  variables.in  while_statement.expected  while_statement.in
test/testfiles/parser/: single_line_comment.error  single_line_comment.valid  syntax_error.error  valid_syntax.valid  variable_declaration.error  variable_declaration.valid
(+1 files in other folders)
